--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -36,13 +36,13 @@ editor_options:
 &nbsp; 
 
 
-The [baRulho](https://cran.r-project.org/package=baRulho) package is intended to facilitate acoustic analysis of (animal) sound transmission experiments. Such studies typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. We will refer to these changes in signal structure 'degradation' for the sake of simplicity. The package offers a workflow with functions to prepare the data set for analysis as well as calculate and visualize several degradation metrics. [baRulho](https://cran.r-project.org/package=baRulho) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
+The [baRulho](https://cran.r-project.org/package=baRulho) package is intended to facilitate acoustic analysis of (animal) sound transmission experiments. Such studies typically aim to quantify changes in signal structure when transmitted in a given habitat by broadcasting and re-recording animal sounds at increasing distances. We will refer to these changes in signal structure 'degradation' for the sake of simplicity. The package offers a workflow with functions to prepare the data set for analysis as well as to calculate and visualize several degradation metrics. [baRulho](https://cran.r-project.org/package=baRulho) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
 
 The main features of the package are:
 
- - The use of loops to apply tasks through acoustic signals referenced in a selection table
- - The production of image files with spectrograms that let users verify acoustic analyzes 
- - The use extended selection tables as the object format to input acoustic data and annotations (except for 'atmospheric_attenuation()') and to output results 
+ - The use of loops to apply tasks through acoustic signals referenced in a selection table (sensu [warbleR](https://cran.r-project.org/package=warbleR))
+ - The production of image files with graphic representations of sound in time and/or frequency that let users verify acoustic analyzes 
+ - The use extended selection tables (sensu [warbleR](https://cran.r-project.org/package=warbleR)) as the object format to input acoustic data and annotations (except for `atmospheric_attenuation()`) and to output results 
  - The use of parallelization to distribute tasks among several cores to improve computational efficiency
 
 The package can be install/load from CRAN as follows:
@@ -74,6 +74,9 @@ td <- tempdir()
 
 ```{r, eval = TRUE, echo = FALSE, message=FALSE}
 
+# global option chunks
+knitr::opts_chunk$set(dpi = 70, fig.width = 8, fig.height = 6)
+
 #load package
 library(baRulho)
 library(kableExtra)
@@ -82,7 +85,7 @@ library(kableExtra)
 td <- tempdir()
 ```
 
-We will also need a few more packages:
+For this vignette we will also need a few more packages:
 
 ```{r}
 
@@ -95,11 +98,13 @@ library(viridis)
 
 ### Inputting acoustic data and annotations
 
-The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as 'wave' objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. This objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/web/packages/Rraven/vignettes/Rraven.html) for more details.
+The package requires the data to be input as extended selection tables. An extended selection table is an object class in R that contains both the annotations (locations of signals in time and frequency) and the corresponding acoustic data as wave objects. Therefore, these are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/web/packages/Rraven/vignettes/Rraven.html) for more details.
 
 <div class="alert alert-info">
 
 <font size="5">Glossary</font> 
+
+-**Model signal**: signal in which transmission properties will be studied, usually found in the original field recordings or synthetic sound files.
 
 - **Reference signal**: signal to use as a pattern to compare against. Usually created by re-recording a model signal broadcast at 1 m from the source (speaker).
 
@@ -109,7 +114,7 @@ The package requires the data to be input as extended selection tables. An exten
 
 - **Test signal**: signals re-recorded far from the source to test for transmission/degradation (also refer to as 're-recorded' signals).
 
-- **Degradation**: term use to describe any changes in the structure of a signal when transmitted in a given habitat.
+- **Degradation**: term use to describe any changes in the structure of a signal when transmitted in a given habitat (note that there is no agreement on this terminology in the scientific community).
 
 </div>
 
@@ -121,28 +126,32 @@ The package requires the data to be input as extended selection tables. An exten
 
 A common sequence of steps to experimentally test hypotheses related to signal transmission is depicted in the following diagram:
 
- <center><img src="analysis_workflow.png" alt="analysis workflow" width="620"></center>
+ <center><img src="analysis_workflow.jpg" alt="analysis workflow" width="620"></center>
 
 &nbsp;
 
-[baRulho](https://cran.r-project.org/package=baRulho) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. Additional functions from [warbleR](https://cran.r-project.org/package=warbleR) can be also used to complement functions in [baRulho](https://cran.r-project.org/package=baRulho). The tools available in this package will be presented following the above workflow.
+[baRulho](https://cran.r-project.org/package=baRulho) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis. Additional functions from [warbleR](https://cran.r-project.org/package=warbleR) can be used (and are used in this vignette) to complement functions in [baRulho](https://cran.r-project.org/package=baRulho). All these tools will be presented following the above workflow.
 
 &nbsp;
 
 
-# Synthetizing sounds
+# Synthesize sounds
 
-In some cases we want to figure out how transmission properties vary across a range of frequencies.
-For instance, Tobias et al (2010) studied whether acoustic adaptation (a especial case of sensory drive, Morton 1975), could explain song evolution in Amazonian avian communities.  To test this the authors created synthetic pure tone sounds that were used as playbacks and re-recorded in different habitats. This is the actual procedure of creating synthetic souds as they described it: " Tones were synthesized at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz) to encompass the range of maximum avian auditory sensitivity (Dooling 1982). At each frequency, we generated two sequences of two 100-msec tones. One sequence had  a  relatively  short  interval  of  150  msec,  close  to  the  mean internote interval in our sample (152± 74 msec). The other se-quence had a longer interval of 250 msec, close to the mean max-imum internote interval in our sample (283± 74 msec). The first sequence reflects a fast-paced song and the second a slower paced song  (sensu  Slabbekoorn  et  al.  2007).  The  master  file  (44100 Hz/16 bit WAV) thereby consisted of a series of 12 pairs of artifi-cial 100-ms constant-frequency tones at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz)." 
+We often want to figure out how transmission properties vary across a range of frequencies.
+For instance, Tobias et al (2010) studied whether acoustic adaptation (a special case of sensory drive; Morton 1975), could explain song evolution in Amazonian avian communities.  To test this the authors created synthetic pure tone sounds that were used as playback and re-recorded in different habitats. This is the actual procedure of creating synthetic sounds as they described it: 
 
-We can synthesize a similar master sound file using the function `sim_songs()` from the package [warbleR](https://cran.r-project.org/package=warbleR). The function requires 1) the number of tones to synthesize (argument `n`), 2) the duration of the tones (`durs`, in s), 3) the duration of the intervals (`gaps`, in s) and 3) the frequencies for each tone to be synthesized (`freqs`, in kHz). In addition, the argument `diff_fun` should be set to "pure.tone" and he argument `harm` to 1 to remove harmonics. In our case we need six tones of 100 ms at 0.5, 1, 2, 3, 4, and 5 kHz separated by intervals of 150 ms (at least for the first synthetic file described in Tobias et al 2010). We can also get a selection table (sensu [warbleR](https://cran.r-project.org/package=warbleR)) with the information about the time and frequency location of every sound. This would be required in order to make the master sound file. To get the selection table we need to set the argument `selec_table = TRUE`. This can be synthesize as follows:
+> "Tones were synthesized at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz) to encompass the range of maximum avian auditory sensitivity (Dooling 1982). At each frequency, we generated two sequences of two 100-msec tones. One sequence had  a  relatively  short  interval  of  150  msec,  close  to  the  mean internote interval in our sample (152± 4 msec). The other sequence had a longer interval of 250 msec, close to the mean maximum internote interval in our sample (283± 74 msec). The first sequence reflects a fast-paced song and the second a slower paced song  (sensu  Slabbekoorn  et  al.  2007).  The  master  file  (44100 Hz/16 bit WAV) thereby consisted of a series of 12 pairs of artificial 100-ms constant-frequency tones at six different frequencies (0.5, 1.0, 2.0, 3.0, 4.0, and 5.0 kHz)." 
+
+We can synthesize the same pure tones using the function `sim_songs()` from the package [warbleR](https://cran.r-project.org/package=warbleR). The function requires 1) the number of tones to synthesize (argument `n`), 2) the duration of the tones (`durs`, in s), 3) the duration of the intervals (`gaps`, in s) and 3) the frequencies for each tone to be synthesized (`freqs`, in kHz). In addition, the argument `diff.fun` should be set to "pure.tone" and the argument `harm` to 1 to remove harmonics. In our case we need six tones of 100 ms at 0.5, 1, 2, 3, 4, and 5 kHz separated by intervals of 150 ms (at least for the first synthetic file described in Tobias et al 2010). We can also get a selection table (sensu [warbleR](https://cran.r-project.org/package=warbleR)) with the information about the time and frequency location of every sound. This would be required in order to make the master sound file. To get the selection table we need to set the argument `selec.table = TRUE`. This can be done as follows:
 
 
 ```{r, eval = TRUE}
 
+# synthesize
 synth.l <- sim_songs(n = 6, durs = 0.1, freqs = c(0.5, 1:5), harms = 1, gaps = 0.15, 
                      diff.fun = "pure.tone", selec.table = TRUE, path = td)
 
+# plot spectro
 spectro(synth.l$wave, scale = FALSE, palette = reverse.topo.colors, grid = FALSE, flim = c(0,6), collevels = seq(-20, 0, 1))
 
 ```
@@ -159,13 +168,13 @@ names(synth.l)
 
 ```
 
-```{r, eval = TRUE}
+```{r, eval = FALSE}
 
-synth.l$selec_table  
+synth.l$selec.table  
 
 ```
 
-```{r, eval = FALSE, echo = TRUE}
+```{r, eval = FALSE, echo = FALSE}
 
 kbl <- kable(synth.l$selec_table, align = "c", row.names = F,  format = "html", escape = F)
 
@@ -241,12 +250,19 @@ kbl
 
 The function also saves the associated '.wav' file in the working directory (in this example `tempdir()`). 
 
+```{r}
+
+list.files(path = td, pattern = "\\.wav$")
+
+```
+
+
 &nbsp;
 
 # Create master sound file for playback
 
 The function `master_sound_file()` creates a master sound file (as you probably guessed) for playback experiments. The function takes wave objects from an extended selection table containing the model signals and concatenates them in a single sound file (with some silence in between signals which length can be modified). `master_sound_file()` adds acoustic markers at the start and end of the playback that can be used to time-sync re-recorded signals, which streamlines quantification of acoustic degradation. 
-The following example shows how to create a master sound file using the synthetic sounds generated above. For the synthetic sounds we need to add a little space between the top and bottom frequency because `sim_songs()` make those values the same for pure tones: 
+The following example shows how to create a master sound file using the synthetic sounds generated above. For the synthetic sounds we need to add a little space between the top and bottom frequency because `sim_songs()` make those values exactly the same for pure tones: 
 
 ```{r, eval = FALSE, echo = TRUE}
 
@@ -269,10 +285,11 @@ dest.path = td, gap.duration = 0.15)
 
 &nbsp;
 
-The function saves the master sound file as a wave file and returns a selection table in the R environment with the time and frequency 'coordinates' of the signals in the file. We can look at the spectrogram of the output file using the [warbleR](https://cran.r-project.org/package=warbleR) function `spectrograms()` as follows:
+The function saves the master sound file as a wave file and returns a selection table in the R environment with the time and frequency 'coordinates' of the signals in that file. We can look at the spectrogram of the output file using the [warbleR](https://cran.r-project.org/package=warbleR) function `spectrograms()` as follows:
 
 ```{r, eval=FALSE, echo=TRUE}
 
+# plot spectro (saved in working directory)
 spectrograms(synth.master.sf, path = td, by.song = "sound.files", 
            xl = 3, collevels = seq(-60, 0, 5))
 
@@ -319,7 +336,7 @@ spectrograms(master.sf, path = td, by.song = "sound.files",
 
  <img src="example_master.wav.jpeg" alt="spectrogram of master file">
 
-Note that the output could also be explored in [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)) using the function `exp_raven()` from the [Rraven](https://cran.r-project.org/package=Rraven) package. `exp_raven()` exports selections in the R environment to a '.txt' file that can be read in Raven:
+Note that the output could also be exported to [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)) for visualization or further manipulation using the function `exp_raven()` from the [Rraven](https://cran.r-project.org/package=Rraven) package. `exp_raven()` exports selections in the R environment to a '.txt' file that can be read in Raven:
  
 
 ```{r, eval = FALSE}
@@ -332,7 +349,7 @@ Note that the output could also be explored in [Raven sound analysis software](h
 
 Both sound files and annotations can be visualized in Raven:
 
- <img src="example_master_table.png" alt="Raven view">
+ <img src="example_master_table.jpg" alt="Raven view">
 
 &nbsp;
 
@@ -340,7 +357,14 @@ Take a look at the [Rraven vignette](https://cran.r-project.org/web/packages/Rra
 
 # Time sync re-recorded sounds
 
-Once we went to the field (or lab) and re-recorded the master sound files at different distances, we are ready to start with data analysis. The first step for getting the data ready for analysis involves finding signals within the re-recorded sound files. First, need align the start marker between the master playback and the re-recorded sound files, as the time difference between the marker and the signals should be the same in both cases. To find the location of the start marker we can use the [warbleR](https://cran.r-project.org/package=warbleR) functions `xcorr()` to run a cross-correlation of the marker across the re-recorded sound file and `find_peaks()` to determine the exact time in which the marker is found. See an example of how this works below (check [warbleR](https://cran.r-project.org/package=warbleR) documentation for more information on how this functions work): 
+Once we went to the field (or lab) and re-recorded the master sound files at different distances, we are ready to start with data analysis. The first step for getting the data ready for analysis involves finding signals within the re-recorded sound files. We only need to align the start marker between the master playback and the re-recorded sound files, based on the fact that the time difference between the marker and the signals should be the same in both cases:
+
+
+ <center><img src="align-crop-optimize.gif" alt="Align recordings diagram"  width="550"></center>
+
+&nbsp;
+
+To find the location of the start marker we can use the [warbleR](https://cran.r-project.org/package=warbleR) functions `xcorr()` to run a cross-correlation of the marker across the re-recorded sound file and `find_peaks()` to determine the exact time in which the marker is found. See an example of how this works below (check [warbleR](https://cran.r-project.org/package=warbleR) documentation for more information on how these functions work): 
 
 ```{r, eval = FALSE}
 
@@ -428,7 +452,7 @@ new.end <- c(2.471722, 2.934833, 3.409811, 3.842433, 4.268611, 4.699855, 5.13007
 new.end
 ```
 
-These is all the data we need to create a new selection table that will allow us to measure acoustic parameters on re-recorded signals. The new selection table can be put together as follows:
+This is all the data we need to create a new selection table that will allow us to measure acoustic parameters on re-recorded signals. The new selection table can be put together as follows:
 
 ```{r, eval = FALSE}
 
@@ -589,7 +613,7 @@ kbl
 
 &nbsp;
 
-Note that we also added column for "distance" that will be useful for downsteam analysis (and to keep track of the distance in which the signals were re-recorded!). In addition, the data was converted into an `extended_selection_table`, which is the data format that pretty much all [baRulho](https://cran.r-project.org/package=baRulho) functions can take. 
+Note that we also added a column for "distance" that will be useful for downsteam analyses (and to keep track of the distance in which the signals were re-recorded!). In addition, the data was converted into an `extended_selection_table`, which is the data format that pretty much all [baRulho](https://cran.r-project.org/package=baRulho) functions take. 
 
 This is somewhat a silly example as we are finding the star marker on the original master sound file. However, it demonstrates how this can be done on any re-recorded sound file.
 
@@ -645,8 +669,8 @@ Most [baRulho](https://cran.r-project.org/package=baRulho) functions are design 
 - The package currently assumes that all recordings have been made with the same equipment and recording volume. This will be modified in future versions to allow for amplitude calibration of recordings.
 - Wave envelope and frequency spectrum calculations are made after applying a bandpass filter within the frequency range of the reference signal ('bottom.freq' and 'top.freq' columns)
 - The package offers two methods to compare signals to the reference: 
-    1. Compare all signals with the counterpart that was recorded at the closest distance to source (e.g. compare a signal recorded at 5m, 10m and 15m with its counterpart recorded at 1m). This is the default method. 
-  2. Compare all signals with the counterpart recorded at the distance immediately before (e.g. a signal recorded at 10m compared with the one recorded at 5m, then signal recorded at 15m compared with the one recorded at 10m and so on).
+    1. Compare all signals with the counterpart that was recorded at the closest distance to source (e.g. compare a signal recorded at 5m, 10m and 15m with its counterpart recorded at 1m). This is the default method.
+    1. Compare all signals with the counterpart recorded at the distance immediately before (e.g. a signal recorded at 10m compared with the one recorded at 5m, then signal recorded at 15m compared with the one recorded at 10m and so on).
 
 
 ## Required data structure
@@ -760,7 +784,7 @@ kbl
 
 The output data frame is similar to input data, except that it includes two new columns ('reference' and 'blur.ratio') with the reference signal and blur ratio values. Note that `NAs` are returned for signals used as reference and 'ambient' noise selections.
 
-If \code{img = TRUE} it also returns 1 image file (in 'jpeg' format) for each comparison showing spectrograms of both signals and the overlaid amplitude envelopes (as probability mass functions (PMF)). 
+If `img = TRUE` it also returns 1 image file (in 'jpeg' format) for each comparison showing spectrograms of both signals and the overlaid amplitude envelopes (as probability mass functions (PMF)). 
 
 ```{r, eval = FALSE}
 
@@ -814,7 +838,7 @@ ggplot(envs, aes(x= time, y = amp, col = distance)) +
 
 ### Spectral blur ratio
  
-Spectral blur ratio (measured by `spectral_blur_ratio()`) quantifies the degradation of sound as a function of the change in signal energy in across the frequency domain, analogous to the blur ratio described above for the time domain (and implemented in `blur_ratio()`). Low values also indicate low degradation of signals. Spectral blur ratio is measured as the mismatch between power spectra (expressed as probability density functions) of the reference signal and the re-recorded signal. It works in the same way than `blur_ratio()`, comparing each signal type to the corresponding reference signal, and the output and images are alike as well.
+Spectral blur ratio (measured by `spectral_blur_ratio()`) quantifies the degradation of sound as a function of the change in signal energy across the frequency domain, analogous to the blur ratio described above for the time domain (and implemented in `blur_ratio()`). Low values also indicate low degradation of signals. Spectral blur ratio is measured as the mismatch between power spectra (expressed as probability density functions) of the reference signal and the re-recorded signal. It works in the same way than `blur_ratio()`, comparing each signal type to the corresponding reference signal, and the output and images are alike as well.
 
 Spectral blur ratio can be calculated as follows:
 
@@ -867,7 +891,9 @@ As in `blur_ratio()`, `spectral_blur_ratio()` can also return the amplitude spec
 
 ```{r}
 
-spctr <- spectral_blur_ratio(X = playback_est, output = "list", pb = FALSE)$spectra
+sbr <- spectral_blur_ratio(X = playback_est, output = "list", pb = FALSE)
+
+spctr <- sbr$spectra
 
 spctr$distance <- as.factor(spctr$distance)
 
@@ -881,6 +907,22 @@ theme_classic()
 
 ```
 
+We can also zoom in to the frequency range of the signals by subsetting the spectrum data:
+
+```{r}
+
+# get the frequencies higher than lowest bottom but lower than highest top freq
+spctr <- spctr[spctr$freq > min(playback_est$bottom.freq) & spctr$freq < max(playback_est$top.freq), ]
+
+ggplot(spctr, aes(y = amp, x = freq, col = distance)) +
+geom_line() +
+facet_wrap(~ signal.type) + 
+scale_color_manual(values = viridis(4)) +
+labs(x = "Frequency (kHz)", y = "Amplitude (PMF)") +
+coord_flip() +
+theme_classic()
+
+```
 &nbsp;
 
 ### Envelope correlation
@@ -899,7 +941,7 @@ is_extended_selection_table(ec)
 
 ```
 
-The output is also similar to the other functions; an extended selection table similar to input data, but also includes two new columns ('reference' and  'envelope.correlation')
+The output is also similar to those of other functions; an extended selection table similar to input data, but also includes two new columns ('reference' and  'envelope.correlation')
 with the reference signal and the amplitude envelope correlation coefficients:
 
 ```{r, eval = FALSE}
@@ -966,7 +1008,7 @@ As in `envelope_correlation()`, `spectral_correlation()` doesn't provide a graph
 
 ### Signal-to-noise ratio
 
-Signal-to-noise ratio (SNR) quantifies signal amplitude level in relation to ambient noise as a metric of overall signal attenuation. Therefore, attenuation refers to the loss of energy as described by Dabelsteen et al (1993). This method is implemented in the function `snr()`. The function requires a measurement of ambient noise, which could either be the noise right before each signal (`noise.ref = adjacent`) or one or more ambient noise measurements per recording (`noise.ref = custom`). For the later, selections on signal parameters in which ambient noise will be measured must be specified. Alternatively, a selection of ambient noise can be used as reference (see 'noise.ref' argument). When margins overlap with another acoustic signal nearby, SNR will be inaccurate, so margin length should be carefully considered. Any SNR less than or equal to one suggests background noise is equal to or overpowering the acoustic signal. SNR can be measured as follows:
+Signal-to-noise ratio (SNR) quantifies signal amplitude level in relation to ambient noise as a metric of overall signal attenuation. Therefore, attenuation refers to the loss of energy as described by Dabelsteen et al (1993). This method is implemented in the function `snr()`. The function requires a measurement of ambient noise, which could either be the noise right before each signal (`noise.ref = "adjacent"`) or one or more ambient noise measurements per recording (`noise.ref = "custom"`). For the latter, selections on signal parameters in which ambient noise will be measured must be specified. Alternatively, one or more selections of ambient noise can be used as reference (see 'noise.ref' argument). This can potentially provide a more accurate representation of ambient noise. When margins overlap with another acoustic signal nearby, SNR will be inaccurate, so margin length should be carefully considered. Any SNR less than or equal to one suggests background noise is equal to or overpowering the acoustic signal. SNR can be measured as follows:
 
 ```{r, eval = TRUE}
 
@@ -1006,7 +1048,7 @@ Note that this function does not compare signals to references, so no reference 
 
 ### Spectrogram distortion
 
-Finally, the function `spcc()` measures spectrographic cross-correlation as a metric of signal distortion of signals. Values close to 1 means very similar spectrograms (i.e. little signal distortion). The function is a wrapper on [warbleR](https://cran.r-project.org/package=warbleR)'s `xcorr()`. It can be run as follows:
+Finally, the function `spcc()` measures spectrogram cross-correlation as a metric of signal distortion of signals. Values close to 1 means very similar spectrograms (i.e. little signal distortion). The function is a wrapper on [warbleR](https://cran.r-project.org/package=warbleR)'s `xcorr()`. It can be run as follows:
 
 ```{r, eval = TRUE}
 
